forth/test/fail/test_const_fold_udivmod_zero.af
use' ../../lang.af
fun: .test_const_fold_udivmod_zero { -- rem quo } 29 0 u/mod end
